# Udemy_CMake_Tutorial_Project1

./: .gitignore  CMakeLists.txt  Doxyfile  conanfile.py  kelvin.cpp  kelvin.h  main.cpp  readme.md
app/: CMakeLists.txt  main.cpp
cmake/: Documentation.cmake
configure/: CMakeLists.txt  version.hpp.in
src/: CMakeLists.txt
src/lib_fahrenheit/: CMakeLists.txt  fahrenheit.cpp  fahrenheit.h
src/lib_kelvin/: CMakeLists.txt  kelvin.cpp  kelvin.h
tests/: CMakeLists.txt  test.cpp
