set(LIB_SOURCES fahrenheit.cpp)
set(LIB_HEADERS fahrenheit.h)
add_library(${LIB_FAHRENHEIT} SHARED ${LIB_SOURCES} ${LIB_HEADERS})
target_link_directories(${LIB_FAHRENHEIT} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

install(TARGETS ${LIB_FAHRENHEIT}
    RUNTIME DESTINATION ${INSTALL_PATH}/bin
    LIBRARY DESTINATION ${INSTALL_PATH}/lib
    ARCHIVE DESTINATION ${INSTALL_PATH}/archive)