set(LIB_SOURCES kelvin.cpp)
set(LIB_HEADERS kelvin.h)
add_library(${LIB_KELVIN} SHARED ${LIB_SOURCES} ${LIB_HEADERS})
target_link_directories(${LIB_KELVIN} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

install(TARGETS ${LIB_KELVIN}
    RUNTIME DESTINATION ${INSTALL_PATH}/bin
    LIBRARY DESTINATION ${INSTALL_PATH}/lib
    ARCHIVE DESTINATION ${INSTALL_PATH}/archive)